# AutomaticLungsegmentation

./: README.md
docs/: LungSeg.cfg
src/Core/: CLS_File.h  CMakeLists.txt  Disjoint_Set.cpp  Disjoint_Set.h  Nifti.cpp  Nifti.h  Nifti_container.cpp  Scan.cpp  Scan.h  Segmentation.cpp  Segmentation.h  batch_mode.cpp  batch_mode.h  batch_mode_qt.h  gaussian_blur.cpp  main.cpp  nifti1.h  scale.cpp
src/QT/Softwarelab/: CMakeLists.txt  batch_menu.cpp  batch_menu.h  batch_menu.ui  compare_menu.cpp  compare_menu.h  compare_menu.ui  load_scan_menu.cpp  load_scan_menu.h  load_scan_menu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  save_menu.cpp  save_menu.h  save_menu.ui  scan_option_menu.cpp  scan_option_menu.h  scan_option_menu.ui  seg_menu.cpp  seg_menu.h  seg_menu.ui  seg_option_menu.cpp  seg_option_menu.h  seg_option_menu.ui
